data/diff_tests/wasmtime/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1273.wast
;; 4. **Test of Block Breaking with Multiple Return Values:**    - Implement functions with multiple return values in module A and import them into module B. Use block constructs in module A with a `br` instruction to break out and trigger calls to imported functions. Check if the operand stack correctly manages multiple return values.    - **Constraint Checked:** Correct handling of operand stack types with multiple return values across module calls.    - **Relation to Constraint:** Validates that stack operations are correctly conducted during cross-module transitions involving complex return types.

(assert_invalid
  (module
    (import "modA" "multi_return" (func $multi_return (result i32 i32)))
    (func $block_break_with_multi_return
      (block (result i32 i32)
        (call $multi_return)
        (br 0)
      )
      (drop) 
      (drop)
    )
  )
  "type mismatch"
)